# OptimaKmeans

./: .gitignore  CMakeLists.txt  Readme.md  autotune.c  main_gpu.c  run_gpu.sh
baseline_sklearn/: kmeans_base.py  run_py.sh  time_plot.py
include/OptimaKmeans/: optima_kmeans.h
scripts/: autotune_probe.json  autotune_probe.py  benchmark.py
src/: optima_kmeans.c
src/cpu_implementation/: CMakeLists.txt  kmeans_v1.c  kmeans_v2.c  kmeans_v3.c
src/gpu_implementation/: CMakeLists.txt  kmeans_gpu.cu  kmeans_gpu.h  kmeans_gpu_atomicshare.cu
